5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/225/users/4008/executions/1635_2711.log
== TEST (2019-04-08 15:52:48) 
-- CODE:
a = float(input("qual o valor total : "))
b = int(input("quantos tickets: "))
c = float(input("qual o valor total dos tickets: "))
d = int(input("qual o total do passes"))
e = float(input("qual o valor dos passes: "))
c + a <= a
c + a > a
if (c + a <= a):
	mensagem = "SUFICIENTE"
else (c + a > a)
	mensagem = "INSUFICIENTE"
print(mensagem)
-- ERROR:
File "XXXX", line 10
    else (c + a > a)
         ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-08 15:52:53) 
-- CODE:
a = float(input("qual o valor total : "))
b = int(input("quantos tickets: "))
c = float(input("qual o valor total dos tickets: "))
d = int(input("qual o total do passes"))
e = float(input("qual o valor dos passes: "))
c + a <= a
c + a > a
if (c + a <= a):
	mensagem = "SUFICIENTE"
else (c + a > a):
	mensagem = "INSUFICIENTE"
print(mensagem)
-- ERROR:
File "XXXX", line 10
    else (c + a > a):
         ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-08 15:53:05) 
-- CODE:
a = float(input("qual o valor total : "))
b = int(input("quantos tickets: "))
c = float(input("qual o valor total dos tickets: "))
d = int(input("qual o total do passes"))
e = float(input("qual o valor dos passes: "))
c + a <= a
c + a > a
if (c + a <= a):
	mensagem = "SUFICIENTE"
else (c + a > a):
	mensagem = "INSUFICIENTE"
print(mensagem)
-- ERROR:
File "XXXX", line 10
    else (c + a > a):
         ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-10 14:02:37) 
-- CODE:
a = float(input("qual o valor total : "))
b = int(input("quantos tickets: "))
c = float(input("qual o valor total dos tickets: "))
d = int(input("qual o total do passes"))
e = float(input("qual o valor dos passes: "))
c + a <= a
c + a > a
if (c + a <= a):
	mensagem = "SUFICIENTE"
else (c + a > a):
	mensagem = "INSUFICIENTE"
print(mensagem)
-- ERROR:
File "XXXX", line 10
    else (c + a > a):
         ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-10 14:03:20) 
-- CODE:
a = float(input("qual o valor total : "))
b = int(input("quantos tickets: "))
c = float(input("qual o valor total dos tickets: "))
d = int(input("qual o total do passes"))
e = float(input("qual o valor dos passes: "))
c + e <= a
c + e > a
if (c + e <= a):
	mensagem = "SUFICIENTE"
else (c + e > a):
	mensagem = "INSUFICIENTE"
print(mensagem)
-- ERROR:
File "XXXX", line 10
    else (c + e > a):
         ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-10 14:03:31) 
-- CODE:
a = float(input("qual o valor total : "))
b = int(input("quantos tickets: "))
c = float(input("qual o valor total dos tickets: "))
d = int(input("qual o total do passes"))
e = float(input("qual o valor dos passes: "))
c + e <= a
c + e > a
if (c + e <= a):
	mensagem = "SUFICIENTE"
else:
	mensagem = "INSUFICIENTE"
print(mensagem)
-- OUTPUT:
SUFICIENTE
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-10 14:03:58) 
-- CODE:
a = float(input("qual o valor total : "))
b = int(input("quantos tickets: "))
c = float(input("qual o valor total dos tickets: "))
d = int(input("qual o total do passes"))
e = float(input("qual o valor dos passes: "))
c + e <= a
c + e > a
if (c + e <= a):
	mensagem = "SUFICIENTE"
else:
	mensagem = "INSUFICIENTE"
print(mensagem)
-- EXECUTION TIME:
0.137459
-- TEST CASE 1:
---- input:
400
15
1.20
30
1.50
---- correct output:
SUFICIENTE
---- user output:
SUFICIENTE
-- TEST CASE 2:
---- input:
90
22
1.20
44
1.50
---- correct output:
INSUFICIENTE
---- user output:
SUFICIENTE
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-10 14:04:13) 
-- CODE:
a = float(input("qual o valor total : "))
b = int(input("quantos tickets: "))
c = float(input("qual o valor total dos tickets: "))
d = int(input("qual o total do passes"))
e = float(input("qual o valor dos passes: "))
c + e <= a
c + e > a
if (c + e <= a):
	mensagem = "SUFICIENTE"
else:
	mensagem = "INSUFICIENTE"
print(mensagem)
-- OUTPUT:
SUFICIENTE
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-10 14:04:37) 
-- CODE:
a = float(input("qual o valor total : "))
b = int(input("quantos tickets: "))
c = float(input("qual o valor total dos tickets: "))
d = int(input("qual o total do passes"))
e = float(input("qual o valor dos passes: "))
c + e <= a
c + e > a
if (c + e <= a):
	mensagem = "SUFICIENTE"
else:
	mensagem = "INSUFICIENTE"
print(mensagem)
-- EXECUTION TIME:
0.230082
-- TEST CASE 1:
---- input:
400
15
1.20
30
1.50
---- correct output:
SUFICIENTE
---- user output:
SUFICIENTE
-- TEST CASE 2:
---- input:
90
22
1.20
44
1.50
---- correct output:
INSUFICIENTE
---- user output:
SUFICIENTE
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-10 14:05:47) 
-- CODE:
a = float(input("qual o valor total : "))
b = int(input("quantos tickets: "))
c = float(input("qual o valor total dos tickets: "))
d = int(input("qual o total do passes"))
e = float(input("qual o valor dos passes: "))
c + e <= a
c + e > a
if (c + e <= a):
	mensagem = "SUFICIENTE"
else:
	mensagem = "INSUFICIENTE"
print(mensagem)
-- OUTPUT:
SUFICIENTE
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-10 14:06:19) 
-- CODE:
a = int(input("qual o valor total : "))
b = int(input("quantos tickets: "))
c = float(input("qual o valor total dos tickets: "))
d = int(input("qual o total do passes"))
e = float(input("qual o valor dos passes: "))
c + e <= a
c + e > a
if (c + e <= a):
	mensagem = "SUFICIENTE"
else:
	mensagem = "INSUFICIENTE"
print(mensagem)
-- OUTPUT:
SUFICIENTE
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-10 14:06:37) 
-- CODE:
a = int(input("qual o valor total : "))
b = int(input("quantos tickets: "))
c = float(input("qual o valor total dos tickets: "))
d = int(input("qual o total do passes"))
e = float(input("qual o valor dos passes: "))
c + e <= a
c + e > a
if (c + e <= a):
	mensagem = "SUFICIENTE"
else:
	mensagem = "INSUFICIENTE"
print(mensagem)
-- EXECUTION TIME:
0.113405
-- TEST CASE 1:
---- input:
400
15
1.20
30
1.50
---- correct output:
SUFICIENTE
---- user output:
SUFICIENTE
-- TEST CASE 2:
---- input:
90
22
1.20
44
1.50
---- correct output:
INSUFICIENTE
---- user output:
SUFICIENTE
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-10 14:10:46) 
-- CODE:
a = int(input("qual o valor total : "))
b = int(input("quantos tickets: "))
c = float(input("qual o valor total dos tickets: "))
d = int(input("qual o total do passes"))
e = float(input("qual o valor dos passes: "))
c*b+e*d<=a
c*b+e*d>a
if (c*b+e*d<=a):
	mensagem = "SUFICIENTE"
else:
	mensagem = "INSUFICIENTE"
print(mensagem)
-- OUTPUT:
SUFICIENTE
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-10 14:11:08) 
-- CODE:
a = int(input("qual o valor total : "))
b = int(input("quantos tickets: "))
c = float(input("qual o valor total dos tickets: "))
d = int(input("qual o total do passes"))
e = float(input("qual o valor dos passes: "))
c*b+e*d<=a
c*b+e*d>a
if (c*b+e*d<=a):
	mensagem = "SUFICIENTE"
else:
	mensagem = "INSUFICIENTE"
print(mensagem)
-- EXECUTION TIME:
0.188626
-- TEST CASE 1:
---- input:
400
15
1.20
30
1.50
---- correct output:
SUFICIENTE
---- user output:
SUFICIENTE
-- TEST CASE 2:
---- input:
90
22
1.20
44
1.50
---- correct output:
INSUFICIENTE
---- user output:
INSUFICIENTE
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
